syntax = "proto3";

option go_package = "rpc/sandbox";

// Sandbox service runs the provided code and returns the result
service Sandbox {
  // MakeHat produces a hat of mysterious, randomly-selected color!
  rpc RunCode(RunCodeRequest) returns (RunCodeResponse);
}

enum Languages {
  JAVASCRIPT = 0;
  TYPESCRIPT = 1;
  GOLANG = 2;
}

// Details and the code itself
message RunCodeRequest {
  Languages language = 1;
  string code = 2;
}

// Result of code execution
message RunCodeResponse { string result = 1; }